--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@
   --social-icons-color: #f4f4fd;
   --customer-icon-color: #8e8f99;
 
+  /* Others */
+  --indent-horizontal: 72px;
+  --indent-vertical: 24px;
+  --items: 1;
+
   /* ANIMATION */
 
   --anim-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -140,13 +145,40 @@ ul {
   padding: 0;
 }
 
+.section {
+  padding: 96px 0;
+}
+
+@media only screen and (min-width: 1158px) {
+  .section {
+    padding: 120px 0;
+  }
+}
+
 .container {
-  padding-left: 15px;
-  padding-right: 15px;
+  /* Basic styles */
+  min-width: 320px;
+  max-width: 428px;
+  padding: 0 16px;
   margin: 0 auto;
 
-  width: 1158px;
-  /* outline: 2px solid tomato; */
+  outline: 2px solid tomato;
+  outline-offset: -2px;
+}
+
+/* Tablet screen */
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+/* Desctop screen */
+@media only screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
 }
 
 .list {
@@ -159,6 +191,7 @@ ul {
 }
 
 .title {
+  margin-bottom: 72px;
   color: var(--secondary-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -193,6 +226,18 @@ ul {
 
   cursor: pointer;
   border-radius: 4px;
+}
+
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: var(--indent-horizontal);
+  column-gap: var(--indent-vertical);
+}
+.card-set-item {
+  flex-basis: calc(
+    (100% - var(--indent-vertical) * (var(--items) - 1)) / var(--items)
+  );
 }
 
 /* INDEX PAGE */
@@ -322,8 +367,7 @@ ul {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding: 188px 0;
 
   text-align: center;
 
@@ -338,17 +382,38 @@ ul {
   background-position: center;
 }
 
+@media only screen and (max-width: 1157px) {
+  .hero {
+    padding: 112px 0;
+  }
+}
+
 .hero-title {
-  max-width: 496px;
-  margin-bottom: 48px;
+  max-width: 320px;
+  margin-bottom: 72px;
   margin-left: auto;
   margin-right: auto;
-
-  color: #ffffff;
   font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
   letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #ffffff;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-title {
+    max-width: 496px;
+    margin-bottom: 36px;
+    font-size: 56px;
+    line-height: 1.07;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .hero-title {
+    margin-bottom: 48px;
+  }
 }
 
 .hero-button {
@@ -378,18 +443,24 @@ ul {
   | FEATURES STYLE
   |============================
 */
-.features {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
 
 .features-list {
-  display: flex;
-  gap: 24px;
+  --items: 1;
+}
+
+@media only screen and (min-width: 768px) {
+  .features-list {
+    --items: 2;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .features-list {
+    --items: 4;
+  }
 }
 
 .features-item {
-  flex-basis: calc((100% - 24px * 3) / 4);
 }
 
 /* FEATURES ICONS STYLE */
@@ -405,6 +476,47 @@ ul {
   border-radius: 4px;
 }
 
+@media only screen and (max-width: 1157px) {
+  .features-thumb {
+    display: none;
+  }
+}
+
+.features-subtitle {
+  margin-bottom: 8px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+@media only screen and (min-width: 768px) {
+  .features-subtitle {
+    text-align: left;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .features-subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+}
+
+.features-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+@media only screen and (min-width: 1158px) {
+  .features-text {
+    font-weight: 400;
+  }
+}
+
 /**
   |============================
   | ABOUT STYLE
@@ -412,20 +524,21 @@ ul {
 */
 
 .about {
+  display: none;
   padding-bottom: 120px;
 }
 
-.about-title {
-  margin-bottom: 72px;
+@media only screen and (min-width: 1158px) {
+  .about {
+    display: block;
+    --items: 3;
+  }
 }
 
 .about-list {
-  display: flex;
-  gap: 24px;
 }
 
 .about-item {
-  flex-basis: calc((100% - 24px * 2) / 3);
 }
 
 /**
@@ -434,22 +547,28 @@ ul {
   |============================
 */
 .employee {
-  padding: 120px 0;
-
   background-color: var(--third-background-color);
 }
 
-.employee-title {
-  margin-bottom: 72px;
+.employee-list {
+  justify-content: center;
 }
 
-.employee-list {
-  display: flex;
-  gap: 24px;
+@media only screen and (min-width: 768px) {
+  .employee-list {
+    --indent-horizontal: 64px;
+    --items: 2;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .employee-list {
+    --items: 4;
+  }
 }
 
 .employee-item {
-  flex-basis: calc((100% - 24px * 3) / 4);
+  max-width: 264px;
   border-radius: 0px 0px 4px 4px;
   background-color: var(--primary-background-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -500,31 +619,55 @@ ul {
 
 /**
   |============================
-  | CUSTOMERS STYLEA
+  | CUSTOMERS STYLES
   |============================
 */
 
 .customers {
-  padding-top: 120px;
-  padding-bottom: 120px;
 }
 
 .customers-title {
-  margin-bottom: 72px;
 }
 
 .customers-social-list {
-  display: flex;
-  gap: 24px;
+  justify-content: center;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+  .customers-social-list {
+    --indent-vertical: 16px;
+    --items: 2;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .customers-social-list {
+    --items: 3;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .customers-social-list {
+    --items: 6;
+  }
+}
+
+.customers-social-item {
+  max-width: 190px;
+}
+
+@media only screen and (min-width: 768px) {
+  .customers-social-item {
+    max-width: 168px;
+  }
 }
 
 .customers-social-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 168px;
+  max-width: 190px;
   height: 88px;
-
   color: var(--customer-icon-color);
 
   border: 1px solid var(--secondary-border-color);
@@ -548,28 +691,57 @@ ul {
   | FOOTER STYLE
   |============================
 */
+
 .footer {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 96px 0;
 
   color: var(--third-text-color);
 
   background-color: var(--secondary-background-color);
 }
 
+@media only screen and (min-width: 1158px) {
+  .footer {
+    padding: 100px 0;
+  }
+}
+
 .footer-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
 }
 
-.logo-container {
-  margin-right: 120px;
+@media only screen and (max-width: 767px) {
+  .logo-container {
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+  .logo-container {
+    margin-left: 108px;
+    margin-right: 24px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .logo-container {
+    margin-right: 120px;
+  }
 }
 
 .footer .logo {
+  display: flex;
+  justify-content: center;
   margin-bottom: 16px;
+  /* display: inline-block; */
+}
 
-  display: inline-block;
+@media only screen and (min-width: 768px) {
+  .footer .logo {
+    justify-content: flex-start;
+  }
 }
 
 .footer-span {
@@ -577,16 +749,35 @@ ul {
 }
 
 .footer-text {
-  width: 264px;
+  width: 268px;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-text {
+    width: 264px;
+  }
 }
 
 /* FOOTER SOCIAL STYLE */
+
+@media only screen and (max-width: 767px) {
+  .social-container {
+    margin: 72px auto;
+  }
+}
 
 .footer-social-text {
   margin-bottom: 16px;
   color: #ffffff;
   font-weight: 500;
   line-height: 1.5;
+}
+
+@media only screen and (max-width: 767px) {
+  .footer-social-text {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .footer-social-list {
@@ -620,23 +811,44 @@ ul {
 
 /* SUBSCRIBE STYLES */
 
-.subscribe-container {
-  margin-left: 80px;
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+  .subscribe-container {
+    margin-top: 72px;
+    margin-left: 108px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .subscribe-container {
+    margin-left: 80px;
+  }
 }
 .subscribe-form {
 }
 .subscribe-text {
+  display: flex;
+  justify-content: center;
   margin-bottom: 16px;
   font-weight: 500;
   color: #ffffff;
 }
+
+@media only screen and (min-width: 768px) {
+  .subscribe-text {
+    justify-content: flex-start;
+  }
+}
+
 .subscribe-wrapper {
   display: flex;
-
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 24px;
 }
+
 .subscribe-input {
-  width: 264px;
+  width: calc(100vw - 32px);
+  max-width: 398px;
   height: 40px;
   padding-left: 16px;
   font-size: 12px;
@@ -648,6 +860,12 @@ ul {
   box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
   background-color: transparent;
   border-radius: 4px;
+}
+
+@media only screen and (min-width: 768px) {
+  .subscribe-input {
+    width: 264px;
+  }
 }
 
 .subscribe-input::placeholder {
@@ -667,13 +885,11 @@ ul {
   border: none;
   color: #ffffff;
   background-color: var(--secondary-accent-color);
-  animation: vertical-shaking 6s infinite;
+  /* animation: vertical-shaking 6s infinite; */
 }
 .subscribe-icon {
   fill: #ffffff;
 }
-
-/* PORTFOLIO-PAGE */
 
 /**
   |============================
