--- a/css/styles.css
+++ b/css/styles.css
@@ -365,9 +365,11 @@ ul {
   display: none;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
   .header-address-list {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
   }
 }
 
@@ -375,12 +377,6 @@ ul {
   .header-address-list {
     display: flex;
     gap: 40px;
-  }
-}
-
-@media only screen and (max-width: 1157px) {
-  .address-item:not(:last-child) {
-    margin-bottom: 12px;
   }
 }
 
