--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@
   --social-icons-color: #f4f4fd;
   --customer-icon-color: #8e8f99;
 
-  /* Others */
+  /* Others*/
   --indent-horizontal: 72px;
   --indent-vertical: 24px;
   --items: 1;
@@ -172,8 +172,8 @@ ul {
   padding: 0 16px;
   margin: 0 auto;
 
-  /* outline: 2px solid tomato;
-  outline-offset: -2px; */
+  outline: 2px solid tomato;
+  /* outline-offset: -2px; */
 }
 
 /* Tablet screen */
@@ -1024,18 +1024,30 @@ ul {
 */
 
 .portfolio-button-list {
-  margin-bottom: 72px;
-
   display: flex;
-  gap: 24px;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 16px;
+  margin-bottom: 48px;
+}
+
+@media only screen and (min-width: 768px) {
+  .portfolio-button-list {
+    justify-content: center;
+    margin-bottom: 64px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .portfolio-button-list {
+    margin-bottom: 72px;
+  }
 }
 
 .portfolio-button {
-  padding: 12px 24px;
-
-  min-width: 69px;
-  min-height: 48px;
+  padding: 8px 16px;
+  min-height: 40px;
 
   color: var(--secondary-accent-color);
 
@@ -1044,6 +1056,13 @@ ul {
 
   transition: color var(--anim-fast), border-color var(--anim-fast),
     background-color var(--anim-fast), box-shadow var(--anim-fast);
+}
+
+@media only screen and (min-width: 768px) {
+  .portfolio-button {
+    padding: 12px 24px;
+    min-height: 48px;
+  }
 }
 
 .portfolio-button:hover,
@@ -1062,17 +1081,47 @@ ul {
 */
 
 .portfolio {
-  padding-top: 96px;
-  padding-bottom: 120px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+@media only screen and (min-width: 768px) {
+  .portfolio {
+    padding-top: 64px;
+    padding-bottom: 96px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .portfolio {
+    padding-top: 100px;
+    padding-bottom: 120px;
+  }
 }
 
 .portfolio-img-list {
+  --items: 1;
+}
+
+@media only screen and (min-width: 768px) {
+  .portfolio-img-list {
+    --items: 2;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .portfolio-img-list {
+    --items: 3;
+  }
+}
+
+/* .portfolio-img-list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
   flex-basis: calc((100% - 48px * 2) / 3);
-}
+} */
 
 .portfolio-link {
   display: block;
