--- a/css/styles.css
+++ b/css/styles.css
@@ -434,19 +434,19 @@ ul {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero/hero_mob@1x.jpg);
+    url(../images/hero/hero-mob@1x.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1157px) {
+@media only screen and (min-width: 429px) {
   .hero {
     max-width: 768px;
   }
 }
 
-@media only screen and (min-width: 1158px) {
+@media only screen and (min-width: 769px) {
   .hero {
     max-width: 1440px;
   }
@@ -460,7 +460,7 @@ ul {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero/hero_mob@2x.jpg);
+      url(../images/hero/hero-mob@2x.jpg);
   }
 }
 
@@ -470,7 +470,7 @@ ul {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero/hero_tab@1x.jpg);
+      url(../images/hero/hero-tab@1x.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
@@ -481,7 +481,7 @@ ul {
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
-        url(../images/hero/hero_tab@2x.jpg);
+        url(../images/hero/hero-tab@2x.jpg);
     }
   }
 }
@@ -492,7 +492,7 @@ ul {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero/hero_desk@1x.jpg);
+      url(../images/hero/hero-desk@1x.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
@@ -503,7 +503,7 @@ ul {
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
-        url(../images/hero/hero_desk@2x.jpg);
+        url(../images/hero/hero-desk@2x.jpg);
     }
   }
 }
@@ -847,6 +847,8 @@ ul {
 @media only screen and (min-width: 768px) and (max-width: 1157px) {
   .logo-container {
     margin-left: 108px;
+    /* padding-left: 108px;
+    width: 552px; */
     margin-right: 24px;
   }
 }
