--- a/css/styles.css
+++ b/css/styles.css
@@ -817,7 +817,6 @@ ul {
   | FOOTER STYLE
   |============================
 */
-
 .footer {
   padding: 96px 0;
 
@@ -834,22 +833,28 @@ ul {
 
 .footer-container {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
+  row-gap: 72px;
+  column-gap: 24px;
   align-items: baseline;
 }
 
-@media only screen and (max-width: 767px) {
-  .logo-container {
-    margin: 0 auto;
+@media only screen and (min-width: 768px) {
+  .footer-container {
+    justify-content: flex-start;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1157px) {
-  .logo-container {
-    margin-left: 108px;
-    /* padding-left: 108px;
-    width: 552px; */
-    margin-right: 24px;
+  .footer-container {
+    padding-left: 108px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .footer-container {
+    column-gap: 0;
   }
 }
 
@@ -860,15 +865,14 @@ ul {
 }
 
 .footer .logo {
+  margin-bottom: 16px;
   display: flex;
   justify-content: center;
-  margin-bottom: 16px;
-  /* display: inline-block; */
 }
 
 @media only screen and (min-width: 768px) {
   .footer .logo {
-    justify-content: flex-start;
+    display: inline-block;
   }
 }
 
@@ -888,23 +892,18 @@ ul {
 
 /* FOOTER SOCIAL STYLE */
 
-@media only screen and (max-width: 767px) {
-  .social-container {
-    margin: 72px auto;
-  }
-}
-
 .footer-social-text {
+  display: flex;
+  justify-content: center;
   margin-bottom: 16px;
   color: #ffffff;
   font-weight: 500;
   line-height: 1.5;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 768px) {
   .footer-social-text {
-    display: flex;
-    justify-content: center;
+    display: block;
   }
 }
 
@@ -939,18 +938,12 @@ ul {
 
 /* SUBSCRIBE STYLES */
 
-@media only screen and (min-width: 768px) and (max-width: 1157px) {
-  .subscribe-container {
-    margin-top: 72px;
-    margin-left: 108px;
-  }
-}
-
 @media only screen and (min-width: 1158px) {
   .subscribe-container {
     margin-left: 80px;
   }
 }
+
 .subscribe-form {
 }
 .subscribe-text {
@@ -963,19 +956,27 @@ ul {
 
 @media only screen and (min-width: 768px) {
   .subscribe-text {
-    justify-content: flex-start;
+    display: block;
   }
 }
 
 .subscribe-wrapper {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+
   gap: 24px;
+}
+
+@media only screen and (max-width: 767px) {
+  .subscribe-wrapper {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 16px;
+  }
 }
 
 .subscribe-input {
   width: calc(100vw - 32px);
+
   max-width: 398px;
   height: 40px;
   padding-left: 16px;
