--- a/css/styles.css
+++ b/css/styles.css
@@ -1231,14 +1231,15 @@ ul {
 
 @media only screen and (min-width: 768px) {
   .modal {
-    padding: 0 25px;
+    padding: 72px 25px 24px 25px;
+
     width: 408px;
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .modal {
-    padding: 0 24px;
+    padding: 72px 24px 24px 24px;
     width: 408px;
   }
 }
